[project]
name = "pulsegraph"
version = "0.1.0"
description = "PulseGraph - Knowledge graph for pulse signals"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph", "extract", "api"]
